# DomiChess2

./: .gitignore  CONTRIBUTING.md  README.md  build.bat  build.spec  pyproject.toml
DomiChess2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
domichess/: __init__.py  _version.py  main.py
domichess/core/: game.py
domichess/themes/boards/blue/: colors.json
domichess/themes/boards/brown/: colors.json
domichess/themes/boards/gray/: colors.json
domichess/themes/boards/green/: colors.json
domichess/themes/boards/red/: colors.json
domichess/themes/boards/turquoise/: colors.json
domichess/themes/boards/yellow/: colors.json
domichess/themes/pieces/John Pablok Cburnett set (with shadow)/: Licence.txt  name.txt
domichess/ui/: board.py  main_window.py  player_panel.py  theme.py
tests/: test_game.py  test_multiplayer.py
